Added touch id authentication

--- a/app.json
+++ b/app.json
@@ -1,4 +1,6 @@
 {
+  "name": "Demo App",
+  "displayName": "Demo-App",
   "expo": {
     "name": "sampleLocalAuthentication",
     "slug": "sampleLocalAuthentication",
